5127 BWEB Tilpasse for VIRKSOMHET (#1207)
* OppgaveDto (og BehandlingsoppgaveDto) utvides med id og navn, som settes til orgnr og orgnavn dersom saken har virksomhet istedenfor bruker.

* Legger på behandlingGjelder i BehandlingOppsummeringDto slik at frontend vet om det er en bruker eller virksomhet på saken/behandlingen.
Legger til hentOrganisasjon-funksjon som tar inn behandlingID og finner organisasjonen til virksomheten om den finnes.

* sammensattNavn -> navn nå som det ikke alltid er person

* Fjerner hentOrganisasjonTilVirksomhet, da frontend skriver seg bort fra denne

* Skriver meg bort fra optional i oppdaterIdOgNavn

* behandlingGjelder -> hovedpartRolle. Flyttet den også over i fagsak-dtoene da den ikke er direkte koblet mot behandling, men heller sak. id -> hovedpartIdent i OppgaveDto.

* Drar inn skjema

* Støtter journalpost med orgnr

* Legger til feltet virksomhetOrgnr i JournalpostDto slik at frontend slipper logikken på om hovedpart er virksomhet eller bruker. Endrer navn fra erBrukerAvsender til erHovedpartAvsender. Justerer litt på felt-instansieringen i JournalpostDto. finnBrukerIdent -> finnHovedpartIdent. Denne tar også nå hensyn til at bruker til journalpost kan være ett orgnr.

* Kaster feil dersom fagsak mangler hovedpart